@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-24T16:15:39Z",
-  "count_outdated" : 353,
-  "uniques_outdated" : 190,
-  "count" : 379,
+  "timestamp" : "2022-06-25T01:00:52Z",
+  "count_outdated" : 355,
+  "uniques_outdated" : 191,
+  "count" : 380,
   "uniques" : 206,
   "clones" : [
-    {
-      "timestamp": "2022-06-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-11T00:00:00Z",
       "count": 2,
